--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header>
             <div class="navbar">
                 <div class="brand">
-                    <img src="https://github.com/successogbenna/LandingPages/blob/main/images/logo.svg" alt="brand-logo" class="brand_img">
+                    <img src="/blob/main/images/logo.svg" alt="brand-logo" class="brand_img">
                 </div>
                 <div class="top_btn">
                     <input type="button" value="Try it Free" class="nav_btn">
