--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <div class="landing_image">
-                    <img src="/images/illustration-mockups.svg" alt="" class="mockups">
+                    <img src="illustration-mockups.svg" alt="" class="mockups">
                 </div>
 
             </div>
@@ -54,7 +54,7 @@
             </div>
             <div class="second_div">
                 <div class="second_div_image">
-                    <img src="/images/illustration-flowing-conversation.svg" alt=""  class="illustration">
+                    <img src="illustration-flowing-conversation.svg" alt=""  class="illustration">
                 </div>
                 <div class="second_div_text">
                     <h2 class="second_div_header">Flowing Conversation</h2>
@@ -72,7 +72,7 @@
                     </p>
                 </div>
                 <div class="third_div_image" >
-                    <img src="/images/illustration-your-users.svg" alt=""class="users">
+                    <img src="illustration-your-users.svg" alt=""class="users">
                 </div>
             </div>
         </section>
@@ -85,7 +85,7 @@
                <input type="button" value="Get Started for Free" class="footer_brand_btn">
             </div> 
             <div class="logo_footer">
-                <img src="/images/logo.svg" alt="" class="logo_img">
+                <img src="logo.svg" alt="" class="logo_img">
             </div>
 
             <div class="footer_start">
